# ai_transformd

./: .gitignore  Cargo.toml  README.md  clipboard_manager.py  config.example.json  config.py  hotkeys.py  llm_client.py  main.py  notifier.py  prompts.py  replacer.py  requirements.txt
providers/: __init__.py  ollama_provider.py  openai_provider.py
src/: commands.rs  config.rs  input.rs  main.rs  providers.rs  replace.rs
tests/: smoke_test.py
